--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -29,5 +29,13 @@
             android:text="@{note.content}"
             tools:text="Note content" />
 
+        <ImageView
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:src="@android:drawable/ic_menu_delete" />
+
     </LinearLayout>
+
 </layout>
