--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/notesFragment">
+
     <fragment
         android:id="@+id/notesFragment"
         android:name="com.example.noteapp.feature_note.presentation.screen_notes_list.NotesFragment"
-        android:label="NotesFragment"
-        tools:layout="@layout/fragment_notes" >
+        android:label="NotesFragment" >
         <action
             android:id="@+id/action_notesFragment_to_addEditFragment"
             app:destination="@id/addEditFragment" />
@@ -16,6 +15,10 @@
     <fragment
         android:id="@+id/addEditFragment"
         android:name="com.example.noteapp.feature_note.presentation.screen_add_edit_note.AddEditFragment"
-        android:label="AddEditFragment"
-        tools:layout="@layout/fragment_add_edit" />
+        android:label="AddEditFragment" >
+        <argument
+            android:name="noteId"
+            app:argType="integer"
+            android:defaultValue="-1" />
+    </fragment>
 </navigation>
