--- a/app/src/main/res/layout/fragment_add_edit.xml
+++ b/app/src/main/res/layout/fragment_add_edit.xml
@@ -3,97 +3,116 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="com.example.noteapp.feature_note.presentation.screen_add_edit_note.AddEditEvent" />
+
         <variable
             name="viewmodel"
             type="com.example.noteapp.feature_note.presentation.screen_add_edit_note.AddEditViewModel" />
     </data>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:clickable="true"
-        android:paddingTop="30dp"
-        android:focusable="true">
+        android:layout_height="match_parent">
 
-        <RadioGroup
-            android:id="@+id/rg_colors_option"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:clickable="true"
+            android:paddingTop="30dp"
+            android:focusable="true">
+
+            <RadioGroup
+                android:id="@+id/rg_colors_option"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:noteColor="@{viewmodel.noteColor}"
+                android:onCheckedChanged="@{viewmodel::onColorChange}"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent" />
+
+                <RadioButton
+                    android:id="@+id/rb_blue"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/rb_color_blue"
+                    android:button="@null" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:layout_height="match_parent" />
+
+                <RadioButton
+                    android:id="@+id/rb_purple"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/rb_color_purple"
+                    android:button="@null" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:layout_height="match_parent" />
+
+                <RadioButton
+                    android:id="@+id/rb_green"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/rb_color_green"
+                    android:button="@null" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:layout_height="match_parent" />
+
+                <RadioButton
+                    android:id="@+id/rb_magenta"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/rb_color_magenta"
+                    android:button="@null" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent" />
+
+            </RadioGroup>
+
+            <EditText
+                android:id="@+id/tv_noteTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={viewmodel._state.note.title}"
+                android:hint="Note title..." />
+<!--            android:afterTextChanged="@{(text) -> viewmodel.onEvent(AddEditEvent.TitleChange(text))}"-->
+
+            <EditText
+                android:id="@+id/tv_noteContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:text="@={viewmodel._state.note.content}"
+                android:hint="Note content..." />
+
+        </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:noteColor="@{viewmodel.noteColor}"
-            android:orientation="horizontal">
+            android:layout_gravity="bottom|end"
+            android:onClick="@{() -> viewmodel.saveNote()}"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"/>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent" />
-
-            <RadioButton
-                android:id="@+id/rb_blue"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rb_color_blue"
-                android:button="@null" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="match_parent" />
-
-            <RadioButton
-                android:id="@+id/rb_purple"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rb_color_purple"
-                android:button="@null" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="match_parent" />
-
-            <RadioButton
-                android:id="@+id/rb_green"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rb_color_green"
-                android:button="@null" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="match_parent" />
-
-            <RadioButton
-                android:id="@+id/rb_magenta"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rb_color_magenta"
-                android:button="@null" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent" />
-
-        </RadioGroup>
-
-        <EditText
-            android:id="@+id/tv_noteTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:setText="@{viewmodel.state.note.title}"
-            android:hint="Note title..." />
-
-        <EditText
-            android:id="@+id/tv_noteContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:setText="@{viewmodel.state.note.content}"
-            android:hint="Note content..." />
-
-    </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
